Add landing page (#171)

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -7,3 +7,8 @@
   href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@600&display=swap"
   rel="stylesheet"
 />
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+  rel="stylesheet"
+/>
