end of the road

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cabin City - Shut Down</title>
+  <title>Cabin: The First Network City</title>
   <style>
     @font-face {
       font-family: 'Inter';
@@ -231,13 +231,6 @@
       display: block;
     }
 
-    .top-bar {
-      height: 2px;
-      width: 100%;
-      background-color: #324841;
-      flex-shrink: 0;
-    }
-
     footer {
       height: 5rem;
       /* background-color: #17120B; */
@@ -246,7 +239,6 @@
   </style>
 </head>
 <body>
-  <div class="top-bar" aria-hidden="true"></div>
   <div class="hero-section">
     <div class="hero-overlay">
       <h1 class="title">Cabin: The First Network City</h1>
@@ -269,7 +261,7 @@
   </div>
 
   <section class="forest-section" aria-hidden="true">
-    <img src="images/landing-forest-network.svg" alt="Forest network" width="840" height="320">
+    <img src="images/landing-forest-network.svg" alt="Forest" width="840" height="320">
   </section>
 
   <footer></footer>
