--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     .hero-section {
       position: relative;
       width: 100%;
-      background-image: url('images/header.jpg');
+      background-image: url('images/map.jpg');
       background-size: cover;
-      background-position: 50% 27%;
+      background-position: 50% 60%;
       overflow: hidden;
     }
 
@@ -253,9 +253,10 @@
         <p>It started as a small group of internet friends leaving cities during the 2020 pandemic and coliving in nature. What began on a 28-acre property in the Texas Hill Country, known as Neighborhood Zero, developed into a bold thesis: a city does not have to be one place. The network grew to include dozens of coliving properties around the world, each designed to offer remote workers fast internet, access to beautiful nature, and a strong community. The goal was to create intergenerational neighborhoods where people could know their neighbors, raise families together, and build meaningful connections at the intersection of technology and nature.</p>
         <p>Cabin DAO became the governance mechanism for this goal. We pioneered new models of community self-governance built around a shared onchain token system. Members earned tokens for contributions, from writing code to building physical infrastructure. Together, we designed and built housing, rehabilitated land, hosted countless dinner parties, and created a template for what modern coliving in nature could look like. We attempted to build online trust systems that could reliably produce real-world communities that feel safe, welcoming, and durable.</p>
         <p>Cabin also revealed the limits of coordination at the frontier. It operated at the edge between idealism and practical logistics, and over time the operational overhead proved heavier than the network could sustain. After four years of operation, the community voted to wind down the formal DAO structure in 2025. The project's treasury was distributed to token holders, and Cabin transitioned to a fully decentralized network.</p>
-        <p>What remains is a proof of possibility. Cabin showed that internet-native communities can instantiate in the real world. It expanded the theory and practice of network societies and digital governance. It ended with a dense web of relationships that will keep propagating into new neighborhoods, new projects, and new ways of living. Cabin neighborhoods continue to independently operate as coliving hubs for digital nomads and remote workers. The <a href="https://nvp.community/" target="_blank" rel="noopener">Neighborhood Village Project</a> spun out of Cabin, and continues to bring together neighbors in over 100 communities around the world.</p>
+        <p>What remains is a proof of possibility. Cabin showed that internet-native communities can instantiate in the real world. It expanded the theory and practice of network societies and digital governance. It ended with a dense web of relationships that will keep propagating into new neighborhoods, new projects, and new ways of living. Cabin neighborhoods continue to independently operate as coliving hubs for digital nomads and remote workers. The <a href="https://nvp.community/" target="_blank" rel="noopener">Neighborhood Village Project</a> spun out of Cabin and continues to bring together neighbors in over 100 communities around the world.</p>
         <p>We explored the frontiers together, planted the flag of network cities, and created a dense web of relationships that will last a lifetime. We are incredibly proud of what we dreamed of and built together, and we can't wait to see what this community does next to build the future we all believe in.</p>
-        <p>See you on the trail 🤙</p>
+        <p>See you on the trail 🤙<br>
+          — <a href="https://jonhillis.com" target="_blank" rel="noopener">Jon</a>, <a href="https://grin.io" target="_blank" rel="noopener">Grin</a>, and the rest of Cabin</p>
       </div>
     </div>
   </div>
